# grufti

./: CHANGES  Makefile  README  README-GruftiStats  install  install-cgi  webconfig.h
configure/: configure  configure.in
skel/: banner  combos  config.gb  help  motd  response  welcome
src/: Makefile  Makefile.in  banlist.c  banlist.h  bf_tab.h  blowfish.c  blowfish.h  channel.c  channel.h  cmd.h  cmd1.c  cmd2.c  codes.c  codes.h  command.c  command.h  config.h.in  dcc.c  dcc.h  event.c  event.h  fhelp.c  fhelp.h  got.c  got.h  grufti.c  grufti.h  gruftiaux.c  gruftiaux.h  listmgr.c  listmgr.h  location.c  location.h  log.c  log.h  main.c  match.c  match.h  misc.c  misc.h  (+38 more)
src-cgi/: Makefile.in  blowfish.c  blowfish.h  cgic.c  main.c  misc.c  misc.h  net.c  net.h  webclient.c  webclient.h
src-cgi/dummycgi/: Makefile  cgic.c  cgic.h  main.c
webstuff/: README  index.html  register.html
